Hackily Added TOC on Mobile and Tablet Fix
Hackily added the Table of Contents dialog by creating a visibility and
action contect for the dialog.

Added a MenuItem to show the Table of Contents when on a correct path
for the mobile action menu.

Fixed the height of the navigation tree on tablet devices.

--- a/packages/documentation/components/Layout/Layout.scss
+++ b/packages/documentation/components/Layout/Layout.scss
@@ -82,4 +82,10 @@
   &__nav-header {
     @include rmd-divider-border(bottom);
   }
+
+  &__nav-tree {
+    @include rmd-utils-tablet-only-media {
+      height: calc(100% - #{rmd-app-bar-theme-var(height)});
+    }
+  }
 }
